seccion tutoriales y publicidad

--- a/index.html
+++ b/index.html
@@ -32,6 +32,97 @@
                 </div>
                 <a href="">Ver mas</a>
             </article>
+            <article>
+                <div class="imagen">
+                    <img src="./images/img-phone-02.jpg" alt="">
+                </div>
+                <div>
+                    <h3>Nombre del producto</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
+                        repellat, impedit eos?</p>
+                </div>
+                <a href="">Ver mas</a>
+            </article>
+            <article>
+                <div class="imagen">
+                    <img src="./images/img-phone-03.jpg" alt="">
+                </div>
+                <div>
+                    <h3>Nombre del producto</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
+                        repellat, impedit eos?</p>
+                </div>
+                <a href="">Ver mas</a>
+            </article>
+            <article>
+                <div class="imagen">
+                    <img src="./images/img-phone-01_360.jpg" alt="">
+                </div>
+                <div>
+                    <h3>Nombre del producto</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
+                        repellat, impedit eos?</p>
+                </div>
+                <a href="">Ver mas</a>
+            </article>
+            <article>
+                <div class="imagen">
+                    <img src="./images/img-phone-02.jpg" alt="">
+                </div>
+                <div>
+                    <h3>Nombre del producto</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
+                        repellat, impedit eos?</p>
+                </div>
+                <a href="">Ver mas</a>
+            </article>
+            <article>
+                <div class="imagen">
+                    <img src="./images/img-phone-03.jpg" alt="">
+                </div>
+                <div>
+                    <h3>Nombre del producto</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
+                        repellat, impedit eos?</p>
+                </div>
+                <a href="">Ver mas</a>
+            </article>
+        </section>
+        <section class="tutoriales">
+            <div class="titulo">
+                <h3>Tutoriales</h3>
+            </div>
+            <div class="contenedor">
+                <div>
+                    <img src="./images/aside-01.jpg" alt="">
+                    <p>Titulo del tutorial de reparacion</p>
+                </div>
+                <div>
+                    <img src="./images/aside-02_360.jpg" alt="">
+                    <p>Titulo del tutorial de reparacion</p>
+                </div>
+                <div>
+                    <img src="./images/aside-03.jpg" alt="">
+                    <p>Titulo del tutorial de reparacion</p>
+                </div>
+                <div>
+                    <img src="./images/aside-04.jpg" alt="">
+                    <p>Titulo del tutorial de reparacion</p>
+                </div>
+            </div>
+        </section>
+        <section class="publicidad">
+            <div class="titulo">
+                <h3>Publicidad</h3>
+            </div>
+            <div class="contenedor">
+                <div>
+                    <img src="./images/ad-01_360.jpg" alt="">
+                </div>
+                <div>
+                    <img src="./images/ad-02.jpg" alt="">
+                </div>
+            </div>
         </section>
     </main>
 </body>
