maquetado tablet y laptop

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
         <div class="boton">
             <i class="fa-solid fa-bars"></i>
         </div>
+        <div class="menu">
+            <ul class="categorias">
+                <li><a href="">SMARTPHONES</a></li>
+                <li><a href="">TABLETS</a></li>
+                <li><a href="">COMPUTADORAS</a></li>
+            </ul>
+            <ul class="lista">
+                <li><a href="">LOGIN</a></li>
+                <li><a href="">REGISTRO</a></li>
+            </ul>
+        </div>
     </header>
     <main>
         <section class="articulos">
@@ -25,7 +36,7 @@
                 <div class="imagen">
                     <img src="./images/img-phone-01_360.jpg" alt="">
                 </div>
-                <div>
+                <div class="infoProducto">
                     <h3>Nombre del producto</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
                         repellat, impedit eos?</p>
@@ -36,7 +47,7 @@
                 <div class="imagen">
                     <img src="./images/img-phone-02.jpg" alt="">
                 </div>
-                <div>
+                <div class="infoProducto">
                     <h3>Nombre del producto</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
                         repellat, impedit eos?</p>
@@ -47,7 +58,7 @@
                 <div class="imagen">
                     <img src="./images/img-phone-03.jpg" alt="">
                 </div>
-                <div>
+                <div class="infoProducto">
                     <h3>Nombre del producto</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
                         repellat, impedit eos?</p>
@@ -58,7 +69,7 @@
                 <div class="imagen">
                     <img src="./images/img-phone-01_360.jpg" alt="">
                 </div>
-                <div>
+                <div class="infoProducto">
                     <h3>Nombre del producto</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
                         repellat, impedit eos?</p>
@@ -69,7 +80,7 @@
                 <div class="imagen">
                     <img src="./images/img-phone-02.jpg" alt="">
                 </div>
-                <div>
+                <div class="infoProducto">
                     <h3>Nombre del producto</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
                         repellat, impedit eos?</p>
@@ -80,7 +91,7 @@
                 <div class="imagen">
                     <img src="./images/img-phone-03.jpg" alt="">
                 </div>
-                <div>
+                <div class="infoProducto">
                     <h3>Nombre del producto</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque officiis veritatis saepe
                         repellat, impedit eos?</p>
@@ -88,43 +99,59 @@
                 <a href="">Ver mas</a>
             </article>
         </section>
-        <section class="tutoriales">
-            <div class="titulo">
-                <h3>Tutoriales</h3>
-            </div>
-            <div class="contenedor">
-                <div>
-                    <img src="./images/aside-01.jpg" alt="">
-                    <p>Titulo del tutorial de reparacion</p>
+        <div class="aside">
+            <section class="tutoriales">
+                <div class="titulo">
+                    <h3>Tutoriales</h3>
                 </div>
-                <div>
-                    <img src="./images/aside-02_360.jpg" alt="">
-                    <p>Titulo del tutorial de reparacion</p>
+                <div class="contenedor">
+                    <div>
+                        <img src="./images/aside-01.jpg" alt="">
+                        <p>Titulo del tutorial de reparacion</p>
+                    </div>
+                    <div>
+                        <img src="./images/aside-02_360.jpg" alt="">
+                        <p>Titulo del tutorial de reparacion</p>
+                    </div>
+                    <div>
+                        <img src="./images/aside-03.jpg" alt="">
+                        <p>Titulo del tutorial de reparacion</p>
+                    </div>
+                    <div>
+                        <img src="./images/aside-04.jpg" alt="">
+                        <p>Titulo del tutorial de reparacion</p>
+                    </div>
                 </div>
-                <div>
-                    <img src="./images/aside-03.jpg" alt="">
-                    <p>Titulo del tutorial de reparacion</p>
+            </section>
+            <section class="publicidad">
+                <div class="titulo">
+                    <h3>Publicidad</h3>
                 </div>
-                <div>
-                    <img src="./images/aside-04.jpg" alt="">
-                    <p>Titulo del tutorial de reparacion</p>
+                <div class="contenedor">
+                    <div>
+                        <img src="./images/ad-01_360.jpg" alt="">
+                    </div>
+                    <div>
+                        <img src="./images/ad-02.jpg" alt="">
+                    </div>
                 </div>
-            </div>
-        </section>
-        <section class="publicidad">
-            <div class="titulo">
-                <h3>Publicidad</h3>
-            </div>
-            <div class="contenedor">
-                <div>
-                    <img src="./images/ad-01_360.jpg" alt="">
-                </div>
-                <div>
-                    <img src="./images/ad-02.jpg" alt="">
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
+    <footer>
+        <div class="redes">
+            <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.twitter.com/"><i class="fa-brands fa-twitter"></i></a>
+        </div>
+        <div class="info">
+            <ul>
+                <li><a href="">Contacto</a></li>
+                <li><a href="">Politicas de privacidad</a></li>
+                <li><a href="">Terminos y condiciones</a></li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
